added icon and .gitignore

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Notes </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Leo Lab Games</title>
+    <link rel="shortcut icon" type="image/x-icon" href="leo_mini.png" />
 
     <!-- Fonts -->
     <!-- Lato -->
@@ -25,13 +27,13 @@
 
 <body id="body">
 
-<div id="preloader">
-    <div class="book">
-        <div class="book__page"></div>
-        <div class="book__page"></div>
-        <div class="book__page"></div>
-    </div>
-</div>
+<!--<div id="preloader">-->
+    <!--<div class="book">-->
+        <!--<div class="book__page"></div>-->
+        <!--<div class="book__page"></div>-->
+        <!--<div class="book__page"></div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <!--
 Header start
@@ -42,9 +44,9 @@ Header start
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
             </button>
             <a class="navbar-brand" href="#">
                 Leo Lab Games
@@ -69,7 +71,7 @@ Header start
     <div class="container-fluid">
         <div class="row">
             <div class="text-center wow zoomIn">
-                <img class="img-responsive center-block" src="leo.png" alt="Leo">
+                <img class="img-responsive center-block" src="leo.png" alt="Leo" style="margin-top: -50px">
             </div>
             <!--<div class="col-md-6">-->
                 <!--<div class="block">-->
